Added functioning ParameterSet class.
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@6 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ PROJECT (MessageFacility)
 
 ADD_SUBDIRECTORY (MessageLogger)
 ADD_SUBDIRECTORY (MessageService)
-#ADD_SUBDIRECTORY (ParameterSet)
-#ADD_SUBDIRECTORY (Utilities)
+ADD_SUBDIRECTORY (ParameterSet)
+ADD_SUBDIRECTORY (Utilities)
+
+#ADD_SUBDIRECTORY (test)
