First working test program for stand alone MessageFacility.
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@7 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ ADD_SUBDIRECTORY (MessageService)
 ADD_SUBDIRECTORY (ParameterSet)
 ADD_SUBDIRECTORY (Utilities)
 
-#ADD_SUBDIRECTORY (test)
+ADD_SUBDIRECTORY (test)
