--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,15 +1,33 @@
-INCLUDE_DIRECTORIES (${MessageFacility_SOURCE_DIR})
+INCLUDE_DIRECTORIES (
+    ${MessageFacility_SOURCE_DIR}
+    )
+
+LINK_DIRECTORIES (
+    $ENV{OSPL_HOME}/lib
+    )
 
 FIND_PACKAGE (Boost COMPONENTS thread filesystem REQUIRED)
 
-ADD_EXECUTABLE (MFTest MFTest.cc)
+ADD_EXECUTABLE (MFTest
+    MFTest.cc
+    )
+
 #ADD_DEFINITIONS ("-g") 
+
 TARGET_LINK_LIBRARIES (MFTest 
-                       MessageServiceD
-                       MessageLoggerD
-                       ParameterSetD
-                       UtilitiesD
-                       ${Boost_LIBRARIES}
-                       pthread)
+    MessageServiceD
+    MessageLoggerD
+    ParameterSetD
+    UtilitiesD
+    ExtensionsD
+#   ${Boost_LIBRARIES}
+    boost_thread
+    boost_filesystem
+    pthread
+    ddsdatabase
+    dcpsgapi
+    dcpssacpp
+    ddsos
+)
 
 ADD_SUBDIRECTORY (DDStest)
