Simplified start up commands for MessageFacility service
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@12 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ ADD_EXECUTABLE (MFTest
     MFTest.cc
     )
 
-#ADD_DEFINITIONS ("-g") 
+ADD_DEFINITIONS ("-g") 
 
 TARGET_LINK_LIBRARIES (MFTest 
     MessageServiceD
