Fixed compile erros due to DDS pre-compilation commands in CMakeLists.txt
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@13 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/CMakeLists.txt
+++ b/Extensions/CMakeLists.txt
@@ -4,11 +4,6 @@ SET (SRC_DIR
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     )
 
-# add all source files in the src/ directory
-FOREACH (FILE ${FILES})
-    SET (srcFiles ${srcFiles} src/${FILE})
-ENDFOREACH (FILE)
-
 # add idl files in the src/ directory
 FOREACH (IDLFILE ${IDLFILES})
     SET (idlFiles ${idlFiles} ${SRC_DIR}/${IDLFILE})
@@ -23,8 +18,6 @@ INCLUDE_DIRECTORIES (
     $ENV{OSPL_HOME}/include/dcps/C++/SACPP
     )
 
-MESSAGE (${CMAKE_CURRENT_SOURCE_DIR})
-
 LINK_DIRECTORIES (
     $ENV{OSPL_HOME}/lib
     )
@@ -33,7 +26,7 @@ ADD_CUSTOM_TARGET (ELDDSdestIDL ALL
     COMMAND $ENV{OSPL_HOME}/bin/idlpp -S -l cpp -d ${SRC_DIR}/DDSdest_bld -I ${SRC_DIR} ${idlFiles}
     )
 
-ADD_LIBRARY (ExtensionsD SHARED ${srcFiles})  
-ADD_LIBRARY (Extensions ${srcFiles})  
+ADD_LIBRARY (ExtensionsD SHARED ${FILES})  
+ADD_LIBRARY (Extensions ${FILES})  
 
 ADD_SUBDIRECTORY (bin)
