--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 
 PROJECT (MessageFacility)
 
+SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/build)
+
+MESSAGE (${CMAKE_INSTALL_PREFIX})
+
 ADD_SUBDIRECTORY (MessageLogger)
 ADD_SUBDIRECTORY (MessageService)
 ADD_SUBDIRECTORY (ParameterSet)
