Removed unused DDStest
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@18 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/CMakeLists.txt
+++ b/Extensions/CMakeLists.txt
@@ -22,9 +22,9 @@ LINK_DIRECTORIES (
     $ENV{OSPL_HOME}/lib
     )
 
-#ADD_CUSTOM_TARGET (ELDDSdestIDL ALL
-#    COMMAND $ENV{OSPL_HOME}/bin/idlpp -S -l cpp -d ${SRC_DIR}/DDSdest_bld -I ${SRC_DIR} ${idlFiles}
-#    )
+ADD_CUSTOM_TARGET (ELDDSdestIDL ALL
+    COMMAND $ENV{OSPL_HOME}/bin/idlpp -S -l cpp -d ${SRC_DIR}/DDSdest_bld -I ${SRC_DIR} ${idlFiles}
+    )
 
 ADD_LIBRARY (ExtensionsD SHARED ${FILES})  
 ADD_LIBRARY (Extensions ${FILES})  
