Made changes to library names to avoid conflicition with NOvA packages
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@27 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/CMakeLists.txt
+++ b/Extensions/CMakeLists.txt
@@ -27,10 +27,14 @@ ADD_CUSTOM_TARGET (ELDDSdestIDL ALL
     )
 
 ADD_LIBRARY (ExtensionsD SHARED ${FILES})  
-# ADD_LIBRARY (Extensions ${FILES})  
+ADD_LIBRARY (Extensions ${FILES})  
 
 SET_TARGET_PROPERTIES (ExtensionsD
-    PROPERTIES OUTPUT_NAME Extensions
+    PROPERTIES OUTPUT_NAME MF_Extensions
+    )
+
+SET_TARGET_PROPERTIES (Extensions
+    PROPERTIES OUTPUT_NAME MF_Extensions
     )
 
 ADD_SUBDIRECTORY (bin)
@@ -43,7 +47,7 @@ INSTALL (FILES ${includeFiles}
     DESTINATION include/Extensions/interface
     )
 
-INSTALL (TARGETS ExtensionsD
+INSTALL (TARGETS Extensions ExtensionsD
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
