Added fields of hostname, host_ip_address, and process_id when logging messages.
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@32 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/build)
 
 MESSAGE (${CMAKE_INSTALL_PREFIX})
 
+INCLUDE_DIRECTORIES($ENV{BOOST_DIR}/include)
+LINK_DIRECTORIES($ENV{BOOST_DIR}/lib)
+
 ADD_SUBDIRECTORY (MessageLogger)
 ADD_SUBDIRECTORY (MessageService)
 ADD_SUBDIRECTORY (ParameterSet)
