Changed StartMessageFacility() interface to allow specify log file name.
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@35 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/bin/CMakeLists.txt
+++ b/Extensions/bin/CMakeLists.txt
@@ -28,6 +28,13 @@ ADD_EXECUTABLE (MFDDSserver
     )
 
 TARGET_LINK_LIBRARIES (MFDDSserver
+    MessageServiceD
+    MessageLoggerD
+    ParameterSetD
+    UtilitiesD
+    ExtensionsD
+    boost_thread
+    boost_filesystem
     ddsdatabase
     dcpsgapi
     dcpssacpp
