Moved pre-compiled DDS IDL from source tree to binary tree.
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@48 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,11 @@
+#
+#  CMakeLists.txt
+#  -------------------------------------------------------------------
+#
+#  CMake build file for project MessageFacility
+#
+
+
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 
 PROJECT (MessageFacility)
