Second release of configuration language parser and a brand new ParameterSet 1. Added support for reference lookup in parsing 2. Parsing the document as a list of assignments instead of a single pset 3. Reorganized parsing rules and semantic actions to make it compact 4. *BIG* changes to the ParameterSet class. Used boost::any to represent everything include the hash, vector, and simple value. getParameter() interfaces are kept for compatibility. Significantly simplified the ParameterSet package.
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@58 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/ParameterSet/src/CMakeLists.txt
+++ b/ParameterSet/src/CMakeLists.txt
@@ -2,12 +2,12 @@
 #MESSAGE (${srcFiles})
 
 SET (FILES
-    Entry.cc
-    FileInPath.cc
+#    Entry.cc
+#    FileInPath.cc
     ParameterSet.cc
-    ParameterSetEntry.cc
-    Registry.cc
-    types.cc
-    VParameterSetEntry.cc
+#    ParameterSetEntry.cc
+#    Registry.cc
+#    types.cc
+#    VParameterSetEntry.cc
     ParameterSetParser.cc
     )
