Added source package to the install directory
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@63 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 
 PROJECT (MessageFacility)
 
+#ADD_DEFINITIONS (-g) 
+
 # Project include directory
 INCLUDE_DIRECTORIES(
     ${MessageFacility_SOURCE_DIR}
@@ -25,7 +27,12 @@ LINK_DIRECTORIES(
 # Install directory
 SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/build)
 
-#ADD_DEFINITIONS (-g) 
+INSTALL (FILES
+    CMakeLists.txt
+    CMakeLists.general
+    CMakeLists.nova
+    DESTINATION src
+    )
 
 ADD_SUBDIRECTORY (MessageLogger)
 ADD_SUBDIRECTORY (MessageService)
