--- a/MessageService/CMakeLists.txt
+++ b/MessageService/CMakeLists.txt
@@ -23,12 +23,34 @@ SET_TARGET_PROPERTIES (MessageService
     PROPERTIES OUTPUT_NAME MF_MessageService
     )
 
+# install files
 FILE (GLOB includeFiles
     ${MessageFacility_SOURCE_DIR}/MessageService/interface/*.h
+    ${MessageFacility_SOURCE_DIR}/MessageService/interface/*.icc
+    )
+
+LIST (APPEND srcFiles
+    src/CMakeLists.txt
+    )
+
+FILE (GLOB cmakeFiles
+    ${MessageFacility_SOURCE_DIR}/MessageService/CMakeLists.txt
     )
 
 INSTALL (FILES ${includeFiles}
     DESTINATION include/MessageService/interface
+    )
+
+INSTALL (FILES ${includeFiles}
+    DESTINATION src/MessageService/interface
+    )
+
+INSTALL (FILES ${srcFiles}
+    DESTINATION src/MessageService/src
+    )
+
+INSTALL (FILES ${cmakeFiles}
+    DESTINATION src/MessageService
     )
 
 INSTALL (TARGETS MessageService MessageServiceD
