Added configuration file to the test package
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@64 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,12 @@ LINK_DIRECTORIES (
     $ENV{OSPL_HOME}/lib
     )
 
+CONFIGURE_FILE (
+    ${CMAKE_CURRENT_SOURCE_DIR}/MessageFacility.cfg
+    ${CMAKE_CURRENT_BINARY_DIR}/MessageFacility.cfg
+    COPYONLY
+    )
+
 ADD_EXECUTABLE (MFTest
     MFTest.cc
     )
